# UIKit2

./: .gitignore  .gitmodules  CMakeLists.txt
android-project/app/jni/: CMakeLists.txt  SDL
android-project/app/jni/src/: CMakeLists.txt
android-project/app/src/main/java/com/borealis/demo/: DemoActivity.java
android-project/app/src/main/java/org/libsdl/app/: SDLSurface.java
demo/: main.cpp
